<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@drawable/divider"
    android:dividerPadding="10dp"
    android:orientation="vertical"
    android:background="@drawable/layout_detail_popup"
    android:paddingTop="@dimen/detailTopDownPadding"
    android:showDividers="middle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailDividerMargin"
        android:layout_marginEnd="@dimen/detailDividerMargin"
        android:orientation="horizontal">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_bold_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_bold" />

        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_bold_italic_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMargin"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_italic" />

        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_bold_underline_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMargin"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_under" />

        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_bold_strike_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_strike" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detailDividerMargin"
        android:layout_marginEnd="@dimen/detailDividerMargin"
        android:layout_marginBottom="@dimen/detailTopDownPadding">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_alignLeft_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_left_align" />

        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_bold_alignCenter_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMargin"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_center_align" />


        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_bold_alignRight_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMargin"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_right_align" />


        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_img_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMarginBetweenCategory"
            android:layout_marginEnd="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_img" />


        <com.example.wysiwyg.EditorButton
            android:id="@+id/btn_youtube_detail"
            android:layout_width="@dimen/buttonSize"
            android:layout_height="@dimen/buttonSize"
            android:layout_marginStart="@dimen/buttonMargin"
            android:background="?attr/actionBarItemBackground"
            android:src="@drawable/ic_video" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/dividerPadding"
        android:layout_marginEnd="@dimen/dividerPadding"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detailTopDownPadding"
                android:layout_marginEnd="@dimen/detailDividerMargin"
                android:paddingStart="@dimen/sideLinePadding"
                android:paddingEnd="@dimen/sideLinePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:padding="10dp"
                    android:text="@string/text_size"
                    android:textSize="@dimen/detailTextSize" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_sizeUp_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_size_down" />

                <TextView
                    android:id="@+id/view_textsize"
                    android:layout_width="@dimen/spacingWidth"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textSize="@dimen/lineSpacing" />

                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_sizeDown_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginStart="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_size_up" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detailDividerMargin"
                android:layout_marginEnd="@dimen/detailDividerMargin"
                android:paddingStart="@dimen/sideLinePadding"
                android:paddingEnd="@dimen/sideLinePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:padding="10dp"
                    android:text="@string/text_color"
                    android:textSize="@dimen/detailTextSize" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_color_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:background="?attr/actionBarItemBackground"
                    android:padding="@dimen/colorPanelPadding"
                    android:src="@drawable/ic_color_panel" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detailDividerMargin"
                android:layout_marginEnd="@dimen/detailDividerMargin"
                android:paddingStart="@dimen/sideLinePadding"
                android:paddingEnd="@dimen/sideLinePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:padding="10dp"
                    android:text="@string/highlight_color"
                    android:textSize="@dimen/detailTextSize" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />


                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_bgcolor_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:background="?attr/actionBarItemBackground"
                    android:padding="@dimen/colorPanelPadding"
                    android:src="@drawable/color_panel_none" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detailDividerMargin"
                android:layout_marginEnd="@dimen/detailDividerMargin"
                android:paddingStart="@dimen/sideLinePadding"
                android:paddingEnd="@dimen/sideLinePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:padding="10dp"
                    android:text="@string/indentation"
                    android:textSize="@dimen/detailTextSize" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_indentation_in"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_indentation_in" />


                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_indentation_out"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginStart="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_indentation_out" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detailDividerMargin"
                android:layout_marginEnd="@dimen/detailDividerMargin"
                android:paddingStart="@dimen/sideLinePadding"
                android:paddingEnd="@dimen/sideLinePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:padding="10dp"
                    android:text="@string/list_type"
                    android:textSize="@dimen/detailTextSize" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_unordered_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_unordered" />


                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_ordered_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginStart="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_ordered" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detailDividerMargin"
                android:layout_marginEnd="@dimen/detailDividerMargin"
                android:paddingStart="@dimen/sideLinePadding"
                android:paddingEnd="@dimen/sideLinePadding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/arial"
                    android:padding="10dp"
                    android:text="@string/line_spacing"
                    android:textSize="@dimen/detailTextSize" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_spacing_down_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginEnd="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_size_down" />

                <TextView
                    android:id="@+id/view_spacing"
                    android:layout_width="@dimen/spacingWidth"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/arial"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textSize="@dimen/lineSpacing" />


                <com.example.wysiwyg.EditorButton
                    android:id="@+id/btn_spacing_up_detail"
                    android:layout_width="@dimen/buttonSize"
                    android:layout_height="@dimen/buttonSize"
                    android:layout_marginStart="5dp"
                    android:background="?attr/actionBarItemBackground"
                    android:src="@drawable/ic_size_up" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>






</LinearLayout>